# fastapi-serving-model-housing

./: .gitignore  pyproject.toml  requirements.txt
src/app/: main.py
src/data/: classes_map.json
src/dto/: model_dto.py
src/experimentation/: experiment.ipynb
src/predict/: __init__.py  predict.py
