[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_prediction_app"
version = "0.0.1"
authors = [
  { name="Gabriel Gomes", email="ribeiroggabriel@gmail.com" },
]
description = "FastAPI app to predict on a trained model."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
